<resources>
    <string name="app_name">Users</string>

    <string name="user_age_precurse">age:</string>
    <string name="user_eye_color_precurse">Eye color:</string>
    <string name="user_eye_color_content_description">User eye color</string>

    <string name="user_fav_fruit_banana">&#127820;</string>
    <string name="user_fav_fruit_apple">&#127823;</string>
    <string name="user_fav_fruit_strawberry">&#127827;</string>
    <string name="user_fav_fruit_unknown">&#129335;</string>

    <string name="user_registered_precurse_text">Registered:</string>
    <string name="user_lat_lon_precurse_text">Location:</string>
    <string name="user_fav_fruit_precusre_text">Favorite fruit:</string>

    <string name="user_lat_lon_placeholder_with_delimiter">%1$f %2$f</string>

    <string name="users_list_isActive_true">Active</string>
    <string name="users_list_isActive_false">Not active</string>
    <string name="refresh_btn_text">Refresh</string>

    <string name="unknown_error_text">Unknown error! Contact with developers.</string>
    <string name="network_error_text">Network error! Check your internet connection.</string>
    <string name="not_found_error_text">Data not found! Contact with developers.</string>
    <string name="access_denied_error_text">Access error! Contact with developers.</string>
    <string name="service_unavailable_error_text">Server error! Try again later.</string>
    <string name="no_permission_error_text">App need permisson to work with storage</string>
    <string name="common_db_error_text">Data Base error, please, contact with developer</string>
</resources>