<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/user_name_text_size"
        app:layout_constraintBottom_toBottomOf="@id/user_name_age_barrier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/user_age_precurse"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_age_precurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_age_precurse"
        app:layout_constraintBottom_toBottomOf="@id/user_name_age_barrier"
        app:layout_constraintLeft_toRightOf="@id/user_name"
        app:layout_constraintRight_toLeftOf="@id/user_age"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/common_padding_from_precurse"
        app:layout_constraintBottom_toBottomOf="@id/user_name_age_barrier"
        app:layout_constraintLeft_toRightOf="@id/user_age_precurse"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/user_name_age_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="user_age_precurse,user_name,user_age"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="152dp" />

    <TextView
        android:id="@+id/user_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/user_company_text_size"
        app:layout_constraintBottom_toTopOf="@id/user_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name_age_barrier" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"
        app:layout_constraintBottom_toTopOf="@id/user_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_company" />

    <TextView
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        app:layout_constraintBottom_toTopOf="@id/user_eye_color_precurse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_email" />

    <TextView
        android:id="@+id/user_eye_color_precurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_eye_color_precurse"
        app:layout_constraintBottom_toTopOf="@id/user_eye_color_fruit_barrier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/user_eye_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_phone" />

    <ImageView
        android:id="@+id/user_eye_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_eye_color_content_description"
        android:paddingStart="@dimen/common_padding_from_precurse"
        android:src="@drawable/user_eye_color_drawable"
        app:layout_constraintBottom_toTopOf="@id/user_eye_color_fruit_barrier"
        app:layout_constraintLeft_toRightOf="@id/user_eye_color_precurse"
        app:layout_constraintRight_toLeftOf="@id/user_fav_fruit_precurse"
        app:layout_constraintStart_toEndOf="@id/user_eye_color_precurse"
        app:layout_constraintTop_toBottomOf="@id/user_phone" />

    <TextView
        android:id="@+id/user_fav_fruit_precurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_fav_fruit_precusre_text"
        app:layout_constraintBottom_toTopOf="@id/user_eye_color_fruit_barrier"
        app:layout_constraintEnd_toStartOf="@id/user_fav_fruit"
        app:layout_constraintLeft_toRightOf="@id/user_eye_color"
        app:layout_constraintRight_toLeftOf="@id/user_fav_fruit"
        app:layout_constraintTop_toBottomOf="@id/user_phone" />

    <TextView
        android:id="@+id/user_fav_fruit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/common_padding_from_precurse"
        app:layout_constraintBottom_toTopOf="@id/user_eye_color_fruit_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/user_fav_fruit_precurse"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_phone" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/user_eye_color_fruit_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="user_eye_color,user_eye_color_precurse,user_fav_fruit_precurse,user_fav_fruit"
        tools:layout_editor_absoluteY="731dp" />

    <TextView
        android:id="@+id/user_registered_precurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_registered_precurse_text"
        app:layout_constraintBottom_toTopOf="@id/user_registered_barrier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/user_registered"
        app:layout_constraintTop_toBottomOf="@id/user_eye_color_fruit_barrier" />

    <TextView
        android:id="@+id/user_registered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/common_padding_from_precurse"
        app:layout_constraintBottom_toTopOf="@id/user_registered_barrier"
        app:layout_constraintLeft_toRightOf="@id/user_registered_precurse"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_eye_color_fruit_barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/user_registered_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="user_registered,user_registered_precurse"
        tools:layout_editor_absoluteY="97dp" />

    <TextView
        android:id="@+id/user_lat_lon_precurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_lat_lon_precurse_text"
        app:layout_constraintBottom_toTopOf="@id/user_lat_lon_barrier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/user_lat_lon"
        app:layout_constraintTop_toBottomOf="@id/user_registered_barrier" />

    <TextView
        android:id="@+id/user_lat_lon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/common_padding_from_precurse"
        app:layout_constraintBottom_toTopOf="@id/user_lat_lon_barrier"
        app:layout_constraintLeft_toRightOf="@id/user_lat_lon_precurse"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_registered_barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/user_lat_lon_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="user_lat_lon_precurse,user_lat_lon"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:id="@+id/user_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_lat_lon_barrier" />

</androidx.constraintlayout.widget.ConstraintLayout>